# nbne

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
api/: notion.py
docs/: git-for-devcontainer.md  setup-for-windows.md  setup-notion-api-key.md
src/: main.py
src/api/: notion.py
src/components/: __init__.py  guide.py
src/containers/: __init__.py  guide.py
src/pages/: 01_Guide.py  01_guide-page.py
src/repositories/: __init__.py  page.py  secret.py
